--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 # Visual Studio
 .vs/
 
-# Cake build
-tools/
-!tools/packages.config
-
 # Wyam
 wwwroot/
 config.wyam.hash
 config.wyam.dll
+
+# Automation build
+output/
