--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -18,9 +18,7 @@ jobs:
           dotnet-version: 3.1.100
       - name: Install Wyam Tool and Build
         run: |
-          dotnet tool install -g Wyam.Tool
-          dotnet tool list
-          dotnet tool list -g
+          dotnet tool restore
           dotnet tool run wyam build
       - name: Netlify Deploy
         uses: jsmrcaga/action-netlify-deploy@v1.0.1
