--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -12,10 +12,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Setup .NET Core
+      - name: Setup .NET Core 3.1.101
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 3.1.100
+          dotnet-version: 3.1.101
+      - name: Setup .NET Core 2.1.803
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 2.1.803
       - name: Install Wyam Tool and Build
         run: |
           dotnet tool restore
