--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -13,20 +13,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-#      - name: Setup .NET Core 3.1.101
-#        uses: actions/setup-dotnet@v1
-#        with:
-#          dotnet-version: 3.1.101
-
-      - name: Setup .NET Core 2.1.803
+      - name: Setup .NET Core 3.1.101
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 2.1.803
+          dotnet-version: 3.1.101
 
       - name: Install Wyam Tool and Build
         run: |
-          dotnet tool install -g wyam.tool
-          wyam build
+          dotnet tool restore
+          dotnet tool run wyam build
 
       - name: Netlify Deploy
         uses: jsmrcaga/action-netlify-deploy@v1.0.1
