--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -15,8 +15,12 @@ jobs:
         
       - name: Setup .Net Core by script
         run: |
-          wget https://dotnetwebsite.azurewebsites.net/download/dotnet-core/scripts/v1/dotnet-install.sh
-          ./dotnet-install.sh
+          wget -q https://packages.microsoft.com/config/ubuntu/19.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
+          sudo dpkg -i packages-microsoft-prod.deb
+          sudo apt-get update
+          sudo apt-get install apt-transport-https
+          sudo apt-get update
+          sudo apt-get install dotnet-sdk-3.1
 
 #      - name: Setup .NET Core 3.1.101
 #        uses: actions/setup-dotnet@v1
