--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -16,11 +16,11 @@ jobs:
       - name: Setup .Net Core by script
         run: |
           wget -q https://packages.microsoft.com/config/ubuntu/19.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
-          sudo dpkg -i packages-microsoft-prod.deb
-          sudo apt-get update
-          sudo apt-get install apt-transport-https
-          sudo apt-get update
-          sudo apt-get install dotnet-sdk-3.1
+          yes | sudo dpkg -i packages-microsoft-prod.deb
+          sudo apt-get update -y
+          sudo apt-get install apt-transport-https -y
+          sudo apt-get update -y
+          sudo apt-get install dotnet-sdk-3.1 -y
 
 #      - name: Setup .NET Core 3.1.101
 #        uses: actions/setup-dotnet@v1
