--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -35,4 +35,4 @@ jobs:
           path: output
 
       - name: Netlify Deploy
-        run: "curl -H 'Authorization: Bearer ${{ secrets.NETLIFY_AUTH_TOKEN }}' -H 'Content-Type: application/zip' --data-binary output.zip https://api.netlify.com/api/v1/sites/${{ secrets.NETLIFY_SITE_ID }}/deploys"
+        run: "curl -H 'Authorization: Bearer ${{ secrets.NETLIFY_AUTH_TOKEN }}' -H 'Content-Type: application/zip' --data-binary '@output.zip' https://api.netlify.com/api/v1/sites/${{ secrets.NETLIFY_SITE_ID }}/deploys"
