--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -29,10 +29,7 @@ jobs:
         run: dotnet tool run wyam build
 
       - name: Create Zip
-        uses: TheDoctor0/zip-release@v0.2.1
-        with:
-          filename: output.zip
-          path: output
+        run: zip output.zip output/*
 
       - name: Netlify Deploy
         run: "curl -H 'Authorization: Bearer ${{ secrets.NETLIFY_AUTH_TOKEN }}' -H 'Content-Type: application/zip' --data-binary '@output.zip' https://api.netlify.com/api/v1/sites/${{ secrets.NETLIFY_SITE_ID }}/deploys"
